tests/testthat/fixtures/parse-errors/ok.R
# no parsing error

# library(dplyr
library(dplyr)

a <- 1 + 1
b <- 2 + a
c <- 3 + b
d <- 4 + c

library(tidyr)
library(dplyr)
